# sdl-bgfx-imgui-as_1d-nonlinear-transformations

./: .clang-format  .clang-tidy  .gitignore  1d-nonlinear-transformations.h  CMakeLists.txt  LICENSE.md  README.md  bgfx-helpers.cpp  bgfx-helpers.h  compile-shaders-linux.sh  compile-shaders-macos.sh  compile-shaders-win.bat  compile-shaders.bat  compile-shaders.sh  configure-vs.bat  configure.bat  configure.sh  curve-handles.h  debug-circle.cpp  debug-circle.h  debug-lines.cpp  debug-lines.h  debug.cpp  debug.h  file-ops.h  fps.cpp  fps.h  fx.inl  hash-combine.h  hierarchy-imgui.cpp  hierarchy-imgui.h  hierarchy-scene.cpp  hierarchy-scene.h  hsv-rgb.h  list.cpp  list.h  list.test.cpp  main.cpp  marching-cube-scene.cpp  marching-cube-scene.h  (+16 more)
as-camera/: as-camera.cpp  as-camera.h
as-camera-sdl/: as-camera-sdl.cpp  as-camera-sdl.h
csg/: LICENSE.md  csg.cpp  csg.h
marching-cubes/: marching-cubes.cpp  marching-cubes.h
scenes/: arcball-scene.cpp  arcball-scene.h  csg-scene.cpp  csg-scene.h  globe-scene.cpp  globe-scene.h  hierarchy-scene.cpp  hierarchy-scene.h  list-scene.cpp  list-scene.h  marching-cube-scene.cpp  marching-cube-scene.h  rubiks-cube-scene.cpp  rubiks-cube-scene.h  scene.h  simple-camera-scene.cpp  simple-camera-scene.h  transforms-scene.cpp  transforms-scene.h  voronoi-scene.cpp  voronoi-scene.h
shader/basic-lighting/: f_basic.sc  v_basic.sc  varying.def.sc
shader/basic-lighting-vert-col/: f_basic_vc.sc  v_basic_vc.sc  varying.def.sc
shader/instance/: f_instance.sc  v_instance.sc  varying.def.sc
shader/next/: f_next.sc  v_next.sc  varying.def.sc
shader/simple/: v_simple.sc
voronoi/: voronoi.cpp  voronoi.h
